ECOSOM-2791 - fix image size & text overflow

--- a/src/components/Birthdays/style.scss
+++ b/src/components/Birthdays/style.scss
@@ -19,6 +19,8 @@
       &-photo {
         width: 49px;
         height: 49px;
+        min-width: 49px;
+        min-height: 49px;
         border-radius: 50%;
         margin-right: 10px;
 
@@ -31,6 +33,7 @@
         display: flex;
         flex-direction: column;
         align-self: center;
+        min-width: 0;
       }
 
       &-date {
@@ -42,6 +45,8 @@
       }
 
       &-name {
+        @extend %ellipsis;
+
         font-style: normal;
         font-weight: bold;
         font-size: 12px;
